# nrf-tensorflow

./: README.md
hello_world/: CMakeLists.txt  README.md  debug.txt  nrf5340pdk_nrf5340_cpuappns.overlay
hello_world/lib/: CMakeLists.txt
hello_world/src/: constants.cc  hello_world_test.cc  main.cc  model.cc  model.h  output_handler.cc  output_handler.h
keyboard_micro_speech/: CMakeLists.txt  Kconfig  README.rst
keyboard_micro_speech/configuration/common/: click_detector.h  dev_descr.h  gpio_pins.h  hid_keymap.h  hid_report_consumer_ctrl.h  hid_report_desc.c  hid_report_desc.h  hid_report_keyboard.h  hid_report_mouse.h  hid_report_system_ctrl.h  hid_report_user_config.h  key_id.h  led_effect.h  led_state.h  motion_sensor.h  passkey_buttons.h  port_state.h  selector_hw.h
keyboard_micro_speech/configuration/nrf5340pdk_nrf5340_cpunet/: app_ZDebug_keyboard.conf  b0_ZReleaseB0.conf  b0_private.pem  buttons_def.h  buttons_sim_def.h  click_detector_def.h  dts.overlay  hid_keymap_def.h  led_state_def.h  leds_def.h  pm_static_ZDebugB0.yml  port_state_def.h
keyboard_micro_speech/doc/: bas.rst  battery_charger.rst  battery_meas.rst  ble_adv.rst  ble_bond.rst  ble_conn_params.rst  ble_discovery.rst  ble_latency.rst  ble_qos.rst  ble_scan.rst  ble_state.rst  board.rst  buttons.rst  buttons_sim.rst  click_detector.rst  config_channel.rst  constlat.rst  dev_descr.rst  dfu.rst  event_propagation.rst  event_rel_modules.rst  failsafe.rst  fn_keys.rst  hfclk_lock.rst  hid_forward.rst  hid_state.rst  hids.rst  info.rst  led_state.rst  led_stream.rst  leds.rst  main.rst  motion.rst  passkey.rst  power_manager.rst  selector.rst  settings_loader.rst  usb_state.rst  watchdog.rst  wheel.rst
keyboard_micro_speech/src/: main.c
keyboard_micro_speech/src/events/: CMakeLists.txt  Kconfig  battery_event.c  battery_event.h  ble_event.c  ble_event.h  button_event.c  button_event.h  click_event.c  click_event.h  config_event.c  config_event.h  hid_event.c  hid_event.h  hids_event.c  hids_event.h  led_event.c  led_event.h  module_state_event.c  module_state_event.h  motion_event.c  motion_event.h  passkey_event.c  passkey_event.h  power_event.c  power_event.h  selector_event.c  selector_event.h  usb_event.c  usb_event.h  wheel_event.c  wheel_event.h
keyboard_micro_speech/src/hw_interface/: CMakeLists.txt  Kconfig  Kconfig.battery_charger  Kconfig.battery_meas  Kconfig.buttons  Kconfig.click_detector  Kconfig.leds  Kconfig.motion  Kconfig.passkey  Kconfig.selector  Kconfig.wheel  battery_charger.c  battery_meas.c  board.c  buttons.c  buttons_sim.c  click_detector.c  leds.c  motion_buttons.c  motion_sensor.c  motion_simulated.c  passkey_buttons.c  selector_hw.c  wheel.c
keyboard_micro_speech/src/modules/: CMakeLists.txt  Kconfig  Kconfig.bas  Kconfig.ble  Kconfig.config_channel  Kconfig.failsafe  Kconfig.fn_keys  Kconfig.hid  Kconfig.hid_forward  Kconfig.hid_state  Kconfig.hids  Kconfig.hotfixes  Kconfig.led_state  Kconfig.led_stream  Kconfig.power_manager  Kconfig.settings_loader  Kconfig.usb_state  Kconfig.watchdog  bas.c  ble_adv.c  ble_bond.c  ble_conn_params.c  ble_discovery.c  ble_latency.c  ble_qos.c  ble_scan.c  ble_state.c  constlat.c  dev_descr.c  dfu.c  failsafe.c  fn_keys.c  hfclk_lock.c  hid_forward.c  hid_state.c  hids.c  info.c  led_state.c  led_stream.c  power_manager.c  (+4 more)
keyboard_micro_speech/src/util/: CMakeLists.txt  config_channel.c  config_channel.h
keyboard_micro_speech/src/util/chmap_filter/include/: chmap_filter.h
micro_speech/: CMakeLists.txt  Kconfig  README.md  prj.conf
micro_speech/lib/: CMakeLists.txt  README.md
micro_speech/src/: audio_provider.cc  audio_provider_mock_test.cc  audio_provider_test.cc  command_responder.cc  i2s.cc  main.cc  main_functions.cc  recognize_commands_test.cc  send_to_net.c  send_to_net.h
micro_speech/src/micro_features/: BUILD  micro_features_generator_test.cc  micro_model_settings.h
tensorflow_hello_world/: CMakeLists.txt  README.md  prj.conf
tensorflow_hello_world/helper_functions/: read_from_sram.py
tensorflow_hello_world/src/: main_functions.cc  output_handler.cc
tensorflow_micro_speech/: CMakeLists.txt  Makefile.inc  debug.txt  prj.conf
tensorflow_micro_speech/helper_functions/: read_from_sram.py
tensorflow_micro_speech/src/: audio_provider.cc  audio_provider.h  command_responder.cc  command_responder.h  command_responder_test.cc  feature_provider_mock_test.cc  feature_provider_test.cc  i2s.cc  i2s.h  main_functions.cc  micro_speech_test.cc  recognize_commands.cc  tmp.cc
tensorflow_micro_speech/src/micro_features/: micro_features_generator.cc  micro_model_settings.cc  micro_model_settings.h
